tests/parsing/smtlib/v2.6/errors/xxx_lexing_invalid_char.smt2
(declare-fun float (Int, Int) Real)
